# c6

./: README.md  pyproject.toml  requirements.txt
api/: apps.py  permissions.py  serializers.py  urls.py  views.py
blog/: admin.py  entity.py  models.py  tools.py  urls.py  views.py
blog/management/: README.md
blog/management/commands/: drop.py  dump_data.py  load_data.py
blog/templatetags/: README.md  custom_tags.py
config/: settings.py  urls.py
custom_auth/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
custom_auth/management/commands/: csu.py
data/: blog_dump_data.json
mailing/: admin.py  apps.py  forms.py  mixins.py  models.py  scheduler.py  signals.py  urls.py  utils.py  views.py
mailing/management/commands/: drop_mailing.py  dump_data_mailing.py  load_data_mailing.py
static/css/: custom.css
templates/: base.html
templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  home.html
templates/custom_auth/: invalid_verify.html  template_activate_account.html
templates/mailing/: client_form.html  client_list.html  emailschedule_form.html  emailschedule_list.html  mailinglog_list.html  message_form.html  message_list.html  simple_form.html
templates/registration/: login.html  register.html
